RESOLVED FIXED297428
REGRESSION(298480@main): [ macOS wk2 ] http/tests/navigation/ping-attribute/anchor-cookie.html is a flaky text failure.
https://bugs.webkit.org/show_bug.cgi?id=297428
Summary REGRESSION(298480@main): [ macOS wk2 ] http/tests/navigation/ping-attribute/a...
Bryan Medina
Reported 2025-08-14 15:40:27 PDT
http/tests/navigation/ping-attribute/anchor-cookie.html is a flaky text failure on macOS wk2. HISTORY: https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fnavigation%2Fping-attribute%2Fanchor-cookie.html TEXT DIFF: --- /Volumes/Data/worker/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/build/layout-test-results/http/tests/navigation/ping-attribute/anchor-cookie-expected.txt +++ /Volumes/Data/worker/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/build/layout-test-results/http/tests/navigation/ping-attribute/anchor-cookie-actual.txt @@ -1,8 +1 @@ -Ping sent successfully -CONTENT_TYPE: text/ping -HTTP_COOKIE: hello=world -HTTP_HOST: 127.0.0.1:8000 -HTTP_PING_FROM: http://127.0.0.1:8000/navigation/ping-attribute/anchor-cookie.html -HTTP_PING_TO: http://127.0.0.1:8000/navigation/resources/check-ping.py -REQUEST_METHOD: POST -REQUEST_URI: /navigation/resources/save-ping.py + Navigate and send ping TEXT DIFF URL: https://build.webkit.org/results/Apple-Sequoia-Release-AppleSilicon-WK2-Tests/298694%40main%20(4099)/http/tests/navigation/ping-attribute/anchor-cookie-diff.txt
Attachments
Radar WebKit Bug Importer
Comment 1 2025-08-14 15:40:44 PDT
Bryan Medina
Comment 2 2025-08-14 15:42:45 PDT
The configurations seem to be nearly 100% constant failures on macOS wk2 x86_64
Bryan Medina
Comment 3 2025-08-14 15:44:09 PDT
I was able to reproduce the text failure locally on my device running macOS Sequoia arm64 Release ToT using the following command: run-webkit-tests http/tests/navigation/ping-attribute/anchor-cookie.html --iterations=25 -f
Bryan Medina
Comment 4 2025-08-14 15:48:48 PDT
It seems to me that the regression point is at 298480@main, since that is where the test started failing and when changes were made to Navigation API.
EWS
Comment 5 2025-08-14 15:49:48 PDT
Test gardening commit 298713@main (b59cd1593bbc): <https://commits.webkit.org/298713@main> Reviewed commits have been landed. Closing PR #49425 and removing active labels.
Chris Dumez
Comment 6 2025-08-24 21:07:15 PDT
Chris Dumez
Comment 7 2025-08-25 01:53:41 PDT
EWS
Comment 8 2025-08-25 14:46:11 PDT
Committed 299131@main (cd89250ae429): <https://commits.webkit.org/299131@main> Reviewed commits have been landed. Closing PR #49836 and removing active labels.
Marta Darbinyan
Comment 9 2025-08-27 11:39:54 PDT
EWS
Comment 10 2025-08-27 11:42:17 PDT
Test gardening commit 299217@main (3a81d69208ac): <https://commits.webkit.org/299217@main> Reviewed commits have been landed. Closing PR #49951 and removing active labels.
Chris Dumez
Comment 11 2025-09-03 01:35:27 PDT
EWS
Comment 12 2025-09-03 17:28:49 PDT
Committed 299534@main (9cc9590aec1f): <https://commits.webkit.org/299534@main> Reviewed commits have been landed. Closing PR #50227 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.